--- a/app/templates/agenda/event_list.html
+++ b/app/templates/agenda/event_list.html
@@ -27,107 +27,95 @@
 
 {% block breadcrumb_menu %}
     {{ block.super }}
-    
+
 {% endblock %}
 
 {% block main %}
     <div class="page page--{% spaceless %}{% block page_class %}{% endblock %}{% endspaceless %}">
-
         <div class="container">
-
             <div class="row">
-
                 <div class="col-sm-9 col-sm-push-3 col-lg-8 col-lg-push-2">
-
                     <h1 class="dotted">
-                        {{ page.title }}
+                        {% if tag and tag|tag_is_excluded %}
+                            {% trans "Tournées" %}
+                        {% elif is_archive %}
+                            {% trans 'Archives' %}
+                        {% else %}
+                            {{ page.title }}
+                        {% endif %}
                     </h1>
-
                 </div>
-
             </div>
 
             <div class="row">
-
                 <div class="col-sm-3 col-lg-2 page__sidebar">
-
                     <div style="position: relative;" >
-
                         {% if tag and not tag|tag_is_excluded or not tag and not is_archive %}
                         <a class="banner banner--light banner--sidebar hide-until-sm" href="{% url 'event_list_tag' 'tournees' %}" style="background-image:url({% static 'img/services/tours.jpg' %});">
-
                             <div class="banner__content">
-
                                 <div class="banner__title fsxxxl">
                                     Tournées {{ CURRENT_SEASON_STYLED }}
                                 </div>
-
                             </div>
-
                         </a>
                         {% endif %}
 
                         <div class="nav-tree-wrapper" data-sticky data-sticky-parent="row" data-sticky-offset="100" data-sticky-detach-at="971">
+                            {% if not tag and not is_archive %}
+                                {% page_menu "pages/menus/current_tree_event.html" %}
+                            {% else %}
+                                <ul class="nav-tree nav-tree--level-{{ branch_level }}">
+                                    <li class="nav-tree__item">
+                                        <a class="nav-tree__link active" href="{% url 'event_list' %}">
+                                            {% if tag and tag|tag_is_excluded %}
+                                                {% trans "Tournées" %}
+                                            {% elif is_archive %}
+                                                {% trans 'Archives' %}
+                                            {% else %}
+                                                {% trans "Rendez-vous in Paris" %}
+                                            {% endif %}
+                                        </a>
 
-                            {% page_menu "pages/menus/current_tree_event.html" %}
+                                        <ul class="nav-tree" data-summary>
+                                            <li class="nav-tree__item nav-tree__item--sub hide">
+                                                <a class="nav-tree__link nav-tree__link--sub" href="#"></a>
+                                            </li>
+                                        </ul>
+                                    </li>
 
-                            {% comment %}
-                            <ul class="nav-tree nav-tree--level-{{ branch_level }}">
-                                <li class="nav-tree__item">
-                                    <a class="nav-tree__link active" href="{% url 'event_list' %}">
-                                        {% if tag and tag|tag_is_excluded %}
-                                            {% trans "Tournées" %}
-                                        {% elif is_archive %}
-                                            {% trans 'Archives' %}
-                                        {% else %}
-                                            {% trans "Rendez-vous in Paris" %}
-                                        {% endif %}
-                                    </a>
-
-                                    <ul class="nav-tree" data-summary>
-                                        <li class="nav-tree__item nav-tree__item--sub hide">
-                                            <a class="nav-tree__link nav-tree__link--sub" href="#"></a>
+                                    {% if is_archive %}
+                                        <li class="nav-tree__item">
+                                            <a class="nav-tree__link" href="{% url 'event_list' %}">
+                                                {% trans "Rendez-vous in Paris" %}
+                                            </a>
                                         </li>
-                                    </ul>
-                                </li>
+                                    {% endif %}
 
-                                {% if is_archive %}
-                                    <li class="nav-tree__item">
-                                        <a class="nav-tree__link" href="{% url 'event_list' %}">
-                                            {% trans "Rendez-vous in Paris" %}
-                                        </a>
-                                    </li>
-                                {% endif %}
+                                    {% if tag and tag|tag_is_excluded %}
+                                        <li class="nav-tree__item">
+                                            <a class="nav-tree__link" href="{% url 'event_list' %}">
+                                                {% trans "Rendez-vous in Paris" %}
+                                            </a>
+                                        </li>
+                                    {% else %}
+                                        <li class="nav-tree__item">
+                                            <a class="nav-tree__link" href="{% url 'event_list_tag' 'tournees' %}">
+                                                {% trans "Tournées" %}
+                                            </a>
+                                        </li>
+                                    {% endif %}
 
-                                {% if tag and tag|tag_is_excluded %}
-                                    <li class="nav-tree__item">
-                                        <a class="nav-tree__link" href="{% url 'event_list' %}">
-                                            {% trans "Rendez-vous in Paris" %}
-                                        </a>
-                                    </li>
-                                {% else %}
-                                    <li class="nav-tree__item">
-                                        <a class="nav-tree__link" href="{% url 'event_list_tag' 'tournees' %}">
-                                            {% trans "Tournées" %}
-                                        </a>
-                                    </li>
-                                {% endif %}
+                                    {% if not is_archive %}
+                                        <li class="nav-tree__item">
+                                            <a class="nav-tree__link" href="{% url "event_list_year" CURRENT_SEASON %}" title="{% trans 'archive' %}">{% trans 'Archives' %}</a>
+                                        </li>
+                                    {% endif %}
+                                </ul>
+                            {% endif %}
 
-                                {% if not is_archive %}
-                                    <li class="nav-tree__item">
-                                        <a class="nav-tree__link" href="{% url "event_list_year" CURRENT_SEASON %}" title="{% trans 'archive' %}">{% trans 'Archives' %}</a>
-                                    </li>
-                                {% endif %}
-
-                            </ul>
-
-                        {% endcomment %}
-
-                                {% if tag and not tag|tag_is_excluded or not tag and not is_archive %}
-
-                                    <ul class="nav-tree nav-tree--level-{{ branch_level }}">
-
-                                    {% keywords_for mezzanine_agenda.event as tags %}
+                            {% if tag and not tag|tag_is_excluded or not tag and not is_archive %}
+                                <ul class="nav-tree nav-tree--level-{{ branch_level }}">
+                                {% keywords_for mezzanine_agenda.event as tags %}
                                     {# {% all_events as all_events %}#}
                                     {% if tags %}
                                         {% comment %}
@@ -143,47 +131,31 @@
                                             {% endif %}
                                         {% endfor %}
                                     {% endif %}
-
-                                    </ul>
-
-                                {% endif %}
-
+                                </ul>
+                            {% endif %}
                         </div>
-
                     </div>
                 </div>
 
                 <div class="mb2 col-sm-9 col-lg-10 page__content" data-summary-content>
-
                     <div class="page__content">
                         <div class="container">
-
                             {% for event in events.object_list %}
                                 {% include 'agenda/includes/event_linecard.html' %}
                             {% endfor %}
-
                             {% if tag and not tag|tag_is_excluded or not tag and not is_archive %}
                             <a class="banner banner--light banner--sidebar hide-from-sm" href="{% url 'event_list_tag' 'tournees' %}" style="background-image:url({% static 'img/services/tours.jpg' %});">
-
                                 <div class="banner__content">
-
                                     <div class="banner__title fsxxxl">
                                         Tournées {{ CURRENT_SEASON_STYLED }}
                                     </div>
-
                                 </div>
-
                             </a>
                             {% endif %}
-
                         </div>
                     </div>
-
                 </div>
-
             </div>
-
         </div>
-
     </div>
 {% endblock %}
