--- a/templates/home/inc/services.html
+++ b/templates/home/inc/services.html
@@ -57,10 +57,10 @@
         </div>
 
         <div class="col-sm-3 col-xs-6">
-            <a class="banner banner--colored banner--green banner--light" href="http://community.ulysses-network.eu/" target="_blank" style="background-image:url({% static 'img/services/ulysses.jpg' %});">
+            <a class="banner banner--colored banner--green banner--light" href="http://project.ulysses-network.eu/" target="_blank" style="background-image:url({% static 'img/services/ulysses.jpg' %});">
                 <div class="banner__content">
                     <div class="banner__title fsxxl">
-                        {% trans 'Ulysses Community' %}
+                        {% trans 'Ulysses Network' %}
                     </div>
                     <div class="banner__desc fss">
                         {% blocktrans %}European network for the promotion and support of young contemporary musical creation{% endblocktrans %}
