--- a/templates/base.html
+++ b/templates/base.html
@@ -34,6 +34,7 @@
     {% compress css %}
     <link rel="stylesheet" href="{% static "vendors/font-awesome/css/font-awesome.css" %}">
     <link rel="stylesheet" href="{% static "vendors/lightslider/dist/css/lightslider.css" %}">
+    <link rel="stylesheet" href="{% static "vendors/lightgallery/dist/css/lightgallery.css" %}">
     <link rel="stylesheet" href="{% static "vendors/pushy/css/pushy.css" %}">
     <link rel="stylesheet" href="{% static "vendors/video.js/dist/video-js.css" %}">
     <link rel="stylesheet" href="{% static "css/index.min.css" %}">
