--- a/templates/core/inc/slider.html
+++ b/templates/core/inc/slider.html
@@ -2,7 +2,7 @@
 <div class="page__slider">
     <ul class="slider-page" data-slider-page>
         {% for image in slider_images %}
-            <li class="slider-page__slide">
+            <li class="slider-page__slide" data-src="{{ MEDIA_URL }}{{ image.file }}">
                 <div class="slider-page__wrapper">
                     <img title="{{ image.title }}" alt="{{ image.title }} {{ image.description }} {{ image.credits }}" class="slider-page__img" src="{{ MEDIA_URL}}{% thumbnail image.file 0 520 %}" alt="" />
                     <div class="slider-page__caption">
