--- a/templates/includes/footer_scripts.html
+++ b/templates/includes/footer_scripts.html
@@ -6,6 +6,7 @@
     <script src="{% static "vendors/sticky-kit/jquery.sticky-kit.js" %}"></script>
     <script src="{% static "vendors/jquery-throttle-debounce/jquery.ba-throttle-debounce.js" %}"></script>
     <script src="{% static "vendors/lightslider/dist/js/lightslider.js" %}"></script>
+    <script src="{% static "vendors/lightgallery/dist/js/lightgallery.js" %}"></script>
     <script src="{% static "vendors/imagesloaded/imagesloaded.pkgd.js" %}"></script>
     <script src="{% static "vendors/pushy/js/pushy.js" %}"></script>
     <script src="{% static "vendors/video.js/dist/video.js" %}"></script>
