--- a/templates/base.html
+++ b/templates/base.html
@@ -21,7 +21,7 @@
 	<link rel="apple-touch-icon-precomposed" sizes="72x72" href="{% static "img/favicons/apple-touch-icon-72x72-precomposed.png" %}">
 	<link rel="apple-touch-icon" sizes="57x57" href="{% static "img/favicons/apple-touch-icon.png" %}">
 	<link rel="shortcut icon" href="{% static "img/favicons/favicon.ico" %}">
-	<link rel="icon" type="image/png" sizes="64x64" href="{% static "img/favicons/favicon.png" %}">
+	<link rel="icon" type="image/png" sizes="96x96" href="{% static "img/favicons/favicon-96x96.png" %}">
 
     {% ifinstalled mezzanine.blog %}
     <link rel="alternate" type="application/rss+xml" title="RSS" href="{% url "blog_post_feed" "rss" %}">
