--- a/app/templates/network/person_detail.html
+++ b/app/templates/network/person_detail.html
@@ -31,7 +31,7 @@
         {{ person.bio|richtext_filters|safe }}
     {% endeditable %}
 
-    <p><strong>{% trans 'Email' %} :</strong> {% if not person.email %}{{ person_email }}{% else %}{{ person.email|unspam }}{% endif %}</p>
+    {% if not person.email and person.activities.all and person.teams %}<p><strong>{% trans 'Email' %} :</strong> {{ person_email }}</p>{% elif person.email %}<p><strong>{% trans 'Email' %} :</strong> {{ person.email|unspam }}</p>{% endif %}
 
     {% with person.activities.all as activities %}
       {% if activities %}
