--- a/static/src/sass/modules/_all.scss
+++ b/static/src/sass/modules/_all.scss
@@ -43,7 +43,7 @@
 @import 'project-details';
 @import 'map-infowindow';
 @import 'map-legend';
-
+@import 'linked-organizations';
 // Typography modules
 @import 'dashed';
 @import 'dotted';
