--- a/templates/pages/departmentpage.html
+++ b/templates/pages/departmentpage.html
@@ -26,6 +26,10 @@
         {% endeditable %}
     {% endif %}-->
 
+    {% if LINKED_ORGA_CONTENT %}
+        {% include 'core/inc/linked_organization_content.html' %}
+    {% endif %}
+
     {% if page.departmentpage.content %}
      {% editable page.departmentpage.content %}
         {{ page.departmentpage.content|richtext_filters|safe }}
