--- a/templates/projects/project_detail.html
+++ b/templates/projects/project_detail.html
@@ -45,9 +45,11 @@
         <h1 class="dotted">{{ project.title }}</h1>
     {% endeditable %}
 
-    {% if LINKED_ORGA_CONTENT %}
-        {% include 'core/inc/linked_organization_content.html' %}
-    {% endif %}
+    {% with page.get_ascendants|last as top_level_parent %}
+        {% if LINKED_ORGA_CONTENT and RESEARCH_SLUG == top_level_parent.slug %}
+            {% include 'core/inc/linked_organization_content.html' %}
+        {% endif %}
+    {% endwith %}
 
     {% if project.description %}
         {% editable project.description %}
