--- a/app/templates/pages/custompage.html
+++ b/app/templates/pages/custompage.html
@@ -22,6 +22,12 @@
 
     {% block page_content %}
 
+        {% with page.get_ascendants|last as top_level_parent %}
+            {% if LINKED_ORGA_CONTENT and RESEARCH_SLUG == top_level_parent.slug %}
+                {% include 'core/inc/linked_organization_content.html' %}
+            {% endif %}
+        {% endwith %}
+
         {% if page.custompage.sub_title %}
             {% editable page.custompage.sub_title %}
                 <div class="chapo">
