--- a/templates/accounts/account_login.html
+++ b/templates/accounts/account_login.html
@@ -1,17 +1,28 @@
-{% extends "accounts/account_form.html" %}
+{% extends "pages/page.html" %}
+
 {% load i18n %}
 
-{% block main %}
+{% block meta_title %}
+	{% trans "Page not found" %}
+{% endblock %}
 
+{% block page_class %}
+	custompage
+{% endblock %}
+
+{% block page_title %}
+	<h1 class="dotted">{% trans "Login" %}</h1>
+{% endblock %}
+
+{% block page_content %}
 {% if request.user.is_authenticated %}
     <p>{% trans "You're already logged in. If you'd like to log in as a different user, you'll need to log out first." %}</p>
 {% else %}
-    {{ block.super }}
+    {% include 'accounts/account_form.html'%}
     {% url "signup" as signup_url %}
     <p>{% blocktrans with request.GET.next as next %}If you don't have an account you can <a href="{{ signup_url }}?next={{ next }}">sign up</a> for one now.{% endblocktrans %}</p>
     {% url "mezzanine_password_reset" as password_reset_url %}
     {% url "profile_update" as profile_update_url %}
     {% blocktrans %}<p>You can also <a href="{{ password_reset_url }}?next={{ profile_update_url }}">reset your password</a> if you've forgotten it.</p>{% endblocktrans %}</p>
 {% endif %}
-
 {% endblock %}
