--- a/app/static/src/sass/modules/_linked-organizations.scss
+++ b/app/static/src/sass/modules/_linked-organizations.scss
@@ -5,6 +5,7 @@ $module: ".linked-organizations";
     list-style-type: none;
     padding: 0;
     margin: 0;
+    margin-top: -45px !important;
 
     &__item {
 
